Fix overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ a {
 
 .card:hover {
   box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
-  transform: translateY(-3px) scale(1.1);
+  transform: translateY(-3px) scale(1.05);
 }
 
 .card .card-header {
